--- a/style-JaviGQ.css
+++ b/style-JaviGQ.css
@@ -1,7 +1,12 @@
 body {
-    background:#2b1b17;
+    background:#FFF;
     font-family:Arial, Helvetica, sans-serif
 }
 
 /*LAYOUT RULES*/
+
+header a { 
+       text-decoration: none;
+        
+}
 
