--- a/style-JaviGQ.css
+++ b/style-JaviGQ.css
@@ -1,12 +1,70 @@
-body {
-    background:#FFF;
-    font-family:Arial, Helvetica, sans-serif
+/*HEADER RULES*/
+
+header {   
+        text-align: center;
 }
 
-/*LAYOUT RULES*/
+header a {
+        text-decoration: none;
+        color:#FFF;
+        font-size:48px;
+}
 
-header a { 
-       text-decoration: none;
+
+
+
+
+/*NAVIGATION RULES*/
+
+nav  { 
+        text-align: center;
+}
+
+nav a { 
+        text-decoration:none;
+        color:#FFF;
+        font-size:28px;
         
 }
 
+nav a:visited { 
+        color:#FFF
+}
+
+
+
+
+
+/*BODY RULES*/
+
+body {
+        background:#FF0000;
+        color:#FFF;
+        font-family:Arial, Helvetica, sans-serif
+}
+
+body a { 
+        color: #FFF;
+        text-decoration:none;
+}
+
+
+
+
+
+
+/*FOOTER RULES*/
+
+footer  {
+        text-align: center;
+}
+
+footer a { 
+        text-decoration:none;
+        color:#FFF;
+        font-size:22px;
+}
+
+footer a:visited { 
+        color:#FFF;
+}
