--- a/base.css/style-JaviGQ.css
+++ b/base.css/style-JaviGQ.css
@@ -67,7 +67,7 @@ nav a:hover {
 body {
         background:#FF6600;
         color:#FFF;
-        font-family:Arial, Helvetica, sans-serif
+        font-family:"Trebuchet MS", Helvetica, sans-serif;
 }
 
 body a { 
