--- a/base.css/style-JaviGQ.css
+++ b/base.css/style-JaviGQ.css
@@ -12,13 +12,11 @@ header a {
 
 
 
-
-
 /*NAVIGATION RULES*/
 
 nav{
-        background-color:#3300CC;
-        border:1px solid #ccc;
+        border-top:1px solid #ccc;
+        border-bottom:1px solid #ccc;
         border-width:1px;
         list-style-type:none;
         margin:1px;
@@ -53,8 +51,8 @@ nav a:visited {
 
 nav a:hover {
         text-decoration:none;
-        background:#FF0000;
-        color:#fff;
+        font-weight: 800;
+        color:#FFF3E7;
 }
 
 
@@ -83,8 +81,8 @@ body a {
 /*FOOTER RULES*/
 
 footer{
-        background-color:#3300CC;
-        border:10px solid #ccc;
+        border-top:1px solid #ccc;
+        border-bottom:1px solid #ccc;
         border-width:1px;
         list-style-type:none;
         margin:0px;
@@ -118,14 +116,37 @@ footer a:visited {
 }
 
 footer a:hover {
-        text-decoration:none;
-        background:#FF0000;
-        color:#fff;
+         text-decoration:none;
+        font-weight: 800;
+        color:#FFF3E7;
 }
 
 /*PARAGRAPH RULES*/
 
 p { 
         text-align:center;
+    
+}
+
+p a { 
+        text-decoration:underline
+}
+
+p a:hover { 
+        text-decoration:underline;
+        font-weight: 800;
+        color:#FFF3E7;
+}
+
+
+
+
+/* IMAGE RULES */
+
+img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto; 
+        margin-bottom: 10px;
     
 }
