--- a/base.css/style-JaviGQ.css
+++ b/base.css/style-JaviGQ.css
@@ -165,3 +165,10 @@ object {
         margin-right: auto; 
         margin-bottom: 10px;
 }
+
+iframe { 
+       display: block;
+       margin-left: auto;
+       margin-right: auto; 
+       margin-bottom: 10px;
+        }
