--- a/CSS/style-JaviGQ.css
+++ b/CSS/style-JaviGQ.css
@@ -10,6 +10,9 @@ header a {
         font-size:48px;
 }
 
+h4 { 
+    text-align:center
+}
 
 
 /*NAVIGATION RULES*/
@@ -124,12 +127,12 @@ footer a:hover {
 /*PARAGRAPH RULES*/
 
 p { 
-        text-align:center;
+        text-align:left;
     
 }
 
 p a { 
-        text-decoration:underline
+        text-decoration:underline;
 }
 
 p a:hover { 
@@ -172,3 +175,125 @@ iframe {
        margin-right: auto; 
        margin-bottom: 10px;
         }
+
+/* EXERCISE 4 */
+
+@media screen and (max-width: 600px) { 
+    
+    
+    
+    
+
+h1, h2, h3, h4 { 
+        text-align: center;
+
+    }
+
+/*NAVIGATION RULES 2*/
+
+nav{
+        border-top:1px solid #ccc;
+        border-bottom:1px solid #ccc;
+        border-width:1px;
+        list-style-type:none;
+        margin:1px;
+        padding:1px;
+        text-align:center;
+}
+
+nav a{
+        display:inline-block;
+        padding:1px;
+        border: solid #ccc;
+        
+}
+
+nav a:link {
+        font-size:20px;
+        background-color:#FF6600;
+        color:#fff;
+        text-align:center;
+        height:25px;
+        margin:10px;
+        width:120px;
+}
+
+nav a:visited { 
+        font-size:20px;
+        background-color:#FF6600;
+        color:#fff;
+        text-align:center;
+        height:25px;
+        margin:20px;
+        width:120px;
+}
+
+nav a:hover {
+        text-decoration:none;
+        font-weight: 800;
+        color:#FFF3E7;
+}
+
+/*PARAGRAPH RULES 2*/
+
+p { 
+        text-align:left;
+        
+    
+}
+
+p a { 
+        text-decoration:underline
+}
+
+p a:hover { 
+        text-decoration:underline;
+        font-weight: 800;
+        color:#FFF3E7;
+}
+
+
+/*FOOTER RULES*/
+
+footer{
+        border-top:1px solid #ccc;
+        border-bottom:1px solid #ccc;
+        border-width:1px;
+        list-style-type:none;
+        margin:0px;
+        padding:0px;
+        text-align:center;
+}
+
+footer a{
+        padding:1px;
+}
+
+footer a:link {
+        font-size:15px;
+        background-color:#FF6600;
+        color:#fff;
+        text-align:center;
+        height:15px;
+        margin:1px;
+        width:55px;
+}
+
+footer a:visited { 
+        font-size:15px;
+        background-color:#FF6600;
+        color:#fff;
+        text-align:center;
+        height:15px;
+        margin:1px;
+        width:65px;
+}
+
+footer a:hover {
+         text-decoration:none;
+        font-weight: 800;
+        color:#FFF3E7;
+}
+
+
+}
