--- a/CSS/style-JaviGQ.css
+++ b/CSS/style-JaviGQ.css
@@ -185,7 +185,7 @@ iframe {
     
 
 h1, h2, h3, h4 { 
-        text-align: center;
+        text-align: left;
 
     }
 
@@ -238,6 +238,8 @@ nav a:hover {
 
 p { 
         text-align:left;
+        font-weight:600;
+        
         
     
 }
