--- a/CSS/style-JaviGQ.css
+++ b/CSS/style-JaviGQ.css
@@ -1,24 +1,51 @@
+body,
+html { 
+    margin:0px;
+    padding:0px;
+    color:inherit;
+    background: rgb(51,78,107); 
+    /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(51,78,107,1) 1%, rgba(12,7,9,1) 98%); 
+    /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(51,78,107,1)), color-stop(98%,rgba(12,7,9,1))); 
+    /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(51,78,107,1) 1%,rgba(12,7,9,1) 98%); 
+    /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(51,78,107,1) 1%,rgba(12,7,9,1) 98%); 
+    /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(51,78,107,1) 1%,rgba(12,7,9,1) 98%); 
+    /* IE10+ */
+background: linear-gradient(to bottom,  rgba(51,78,107,1) 1%,rgba(12,7,9,1) 98%); 
+    /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#334e6b', endColorstr='#0c0709',GradientType=0 ); 
+    /* IE6-9 */
+
+}
+
+
+
+/*DIV*/
+
+#wrap {
+    width:1050px;
+    margin:0 auto;
+
+}
+
+#main {
+    float:right;
+    width:750px;
+   ;
+}
+
+#sidebar {
+    float:left;
+    width:150px;
+}
+
 /*HEADER RULES*/
 
-header {   
-        text-align: center;
-}
-
-header a {
-        text-decoration: none;
-        color:#FFF;
-        font-size:48px;
-}
-
-h4 { 
-    text-align:center
-}
-
-
-/*NAVIGATION RULES*/
-
-nav{
-        border-top:1px solid #ccc;
+#header {   
         border-bottom:1px solid #ccc;
         border-width:1px;
         list-style-type:none;
@@ -27,14 +54,77 @@ nav{
         text-align:center;
 }
 
-nav a{
-        display:inline-block;
-        padding:5px;
+#header a {
+        text-decoration: none;
+        color:#FFF;
+        font-size:48px;
 }
 
-nav a:link {
+
+#h2 {
+        border-bottom:10px solid #ccc;
+        border-width:1px;
+        list-style-type:none;
+        margin:1px;
+        padding:1px;
+        text-align:center;
         font-size:20px;
-        background-color:#FF6600;
+        background-color:#EB6900;
+        color:#FF1800;
+        text-decoration:none;
+        text-align:center;
+        height:25px;
+        width:750px;
+}
+
+#h2:visited { 
+        text-decoration: underline;
+        color:#FF1800;
+        text-align:center;
+}
+
+#h2:hover {
+        text-decoration: none;
+        color:#FF1800;
+        text-align:center;
+
+}
+
+#h3 {
+    text-decoration:none;
+    text-align:center;
+    color:#FFF;
+    }
+
+#h4 { 
+    text-decoration:none;
+    text-align:center;
+    color:#FFF;
+}
+
+
+/*NAVIGATION RULES*/
+
+#nav{
+        border-bottom:1px solid #ccc;
+        border-width:1px;
+        list-style-type:none;
+        margin:1px;
+        padding:1px;
+        text-align:center;
+}
+
+#nav a{
+        text-decoration:none;
+        display:inline-block;
+        padding:1px;
+        border: solid #ccc;
+        
+}
+
+#nav a:link {
+        font-size:20px;
+        background-color:#EB6900;
         color:#fff;
         text-align:center;
         height:25px;
@@ -42,9 +132,9 @@ nav a:link {
         width:120px;
 }
 
-nav a:visited { 
+#nav a:visited { 
         font-size:20px;
-        background-color:#FF6600;
+        background-color:#EB6900;
         color:#fff;
         text-align:center;
         height:25px;
@@ -52,7 +142,7 @@ nav a:visited {
         width:120px;
 }
 
-nav a:hover {
+#nav a:hover {
         text-decoration:none;
         font-weight: 800;
         color:#FFF3E7;
@@ -65,13 +155,14 @@ nav a:hover {
 
 /*BODY RULES*/
 
-body {
-        background:#FF6600;
+#body {
         color:#FFF;
         font-family:"Trebuchet MS", Helvetica, sans-serif;
+        margin: 1px 150px 10px 150px;
+
 }
 
-body a { 
+#body a { 
         color: #FFF;
         text-decoration:none;
 }
@@ -83,65 +174,84 @@ body a {
 
 /*FOOTER RULES*/
 
-footer{
+#footer{
         border-top:1px solid #ccc;
-        border-bottom:1px solid #ccc;
+        border-bottom:5px solid #ccc;
         border-width:1px;
         list-style-type:none;
         margin:0px;
         padding:0px;
         text-align:center;
+        clear:both;
 }
 
-footer a{
+#footer a{
+        text-decoration:none;
         display:inline-block;
-        padding:5px;
+        padding:2px;
+        border: 1px solid #ccc
 }
 
-footer a:link {
+#footer a:link {
         font-size:15px;
         background-color:#FF6600;
         color:#fff;
         text-align:center;
-        height:15px;
+        height:17px;
         margin:5px;
         width:65px;
 }
 
-footer a:visited { 
+#footer a:visited { 
         font-size:15px;
         background-color:#FF6600;
         color:#fff;
         text-align:center;
-        height:15px;
-        margin:1px;
+        height:17px;
+        margin:5px;
         width:65px;
 }
 
-footer a:hover {
+#footer a:hover {
          text-decoration:none;
         font-weight: 800;
         color:#FFF3E7;
 }
 
+
+
 /*PARAGRAPH RULES*/
 
 p { 
         text-align:left;
+        color:#FFF;
     
 }
 
-p a { 
+
+a {
+        text-align:center;
         text-decoration:underline;
+        color: #FF1800;
 }
 
-p a:hover { 
+a:link { 
+        text-align:center;
+        text-decoration:underline;
+        color: #FF1800;
+}
+
+a:visited { 
+        text-decoration:underline;
+        color:#FF1800;
+}
+
+
+a:hover { 
         text-decoration:underline;
         font-weight: 800;
-        color:#FFF3E7;
+        color:#FF1800;
 }
-
-
 
 
 
@@ -153,7 +263,6 @@ img {
         margin-left: auto;
         margin-right: auto; 
         margin-bottom: 10px;
-    
 }
 
 
@@ -163,9 +272,10 @@ img {
 /* OBJECT RULES */
 
 object {
+
         display: block;
-        margin-left: auto;
-        margin-right: auto; 
+        margin-left: 10px;
+        margin-right: 10px; 
         margin-bottom: 10px;
 }
 
@@ -174,25 +284,18 @@ iframe {
        margin-left: auto;
        margin-right: auto; 
        margin-bottom: 10px;
+        clear:both;
         }
 
-/* EXERCISE 4 */
+
+/*MEDIA SCREEN*/
 
 @media screen and (max-width: 600px) { 
     
     
-    
-    
+/*HEADER RULES*/
 
-h1, h2, h3, h4 { 
-        text-align: left;
-
-    }
-
-/*NAVIGATION RULES 2*/
-
-nav{
-        border-top:1px solid #ccc;
+#header {   
         border-bottom:1px solid #ccc;
         border-width:1px;
         list-style-type:none;
@@ -201,16 +304,43 @@ nav{
         text-align:center;
 }
 
-nav a{
+#header a {
+        text-decoration: none;
+        color:#FFF;
+        font-size:48px;
+}
+
+#h3 {
+    text-decoration:none;
+    text-align:center
+}
+
+#h4 { 
+    text-align:center
+}
+
+/*NAVIGATION RULES 2*/
+
+#nav{
+        border-bottom:1px solid #ccc;
+        border-width:1px;
+        list-style-type:none;
+        margin:1px;
+        padding:1px;
+        text-align:center;
+}
+
+#nav a{
+        text-decoration:none;
         display:inline-block;
         padding:1px;
         border: solid #ccc;
         
 }
 
-nav a:link {
+#nav a:link {
         font-size:20px;
-        background-color:#FF6600;
+        background-color:#EB6900;
         color:#fff;
         text-align:center;
         height:25px;
@@ -218,9 +348,9 @@ nav a:link {
         width:120px;
 }
 
-nav a:visited { 
+#nav a:visited { 
         font-size:20px;
-        background-color:#FF6600;
+        background-color:#EB6900;
         color:#fff;
         text-align:center;
         height:25px;
@@ -228,7 +358,7 @@ nav a:visited {
         width:120px;
 }
 
-nav a:hover {
+#nav a:hover {
         text-decoration:none;
         font-weight: 800;
         color:#FFF3E7;
@@ -238,64 +368,107 @@ nav a:hover {
 
 p { 
         text-align:left;
-        font-weight:600;
-        
-        
+        color:#FFF;
     
 }
 
-p a { 
-        text-decoration:underline
+
+a {
+        text-align:center;
+        text-decoration:underline;
+        color: #FF1800;
 }
 
-p a:hover { 
+a:link { 
+        text-align:center;
+        text-decoration:underline;
+        color: #FF1800;
+}
+
+a:visited { 
+        text-decoration:underline;
+        color:#FF1800;
+}
+
+
+a:hover { 
         text-decoration:underline;
         font-weight: 800;
-        color:#FFF3E7;
+        color:#FF1800;
 }
+
+
+
 
 
 /*FOOTER RULES*/
 
-footer{
+
+#footer{
         border-top:1px solid #ccc;
-        border-bottom:1px solid #ccc;
+        border-bottom:5px solid #ccc;
         border-width:1px;
         list-style-type:none;
         margin:0px;
         padding:0px;
         text-align:center;
+        clear:both;
 }
 
-footer a{
-        padding:1px;
+#footer a{
+        text-decoration:none;
+        display:inline-block;
+        padding:2px;
+        border: solid #ccc
 }
 
-footer a:link {
+#footer a:link {
         font-size:15px;
         background-color:#FF6600;
         color:#fff;
         text-align:center;
-        height:15px;
-        margin:1px;
-        width:55px;
-}
-
-footer a:visited { 
-        font-size:15px;
-        background-color:#FF6600;
-        color:#fff;
-        text-align:center;
-        height:15px;
-        margin:1px;
+        height:17px;
+        margin:5px;
         width:65px;
 }
 
-footer a:hover {
+#footer a:visited { 
+        font-size:15px;
+        background-color:#FF6600;
+        color:#fff;
+        text-align:center;
+        height:17px;
+        margin:5px;
+        width:65px;
+}
+
+#footer a:hover {
          text-decoration:none;
         font-weight: 800;
         color:#FFF3E7;
 }
 
+/*IMAGE RULES*/
+
+img {
+        display:block;
+        margin-left: auto;
+        margin-right: auto; 
+        margin-bottom: 10px;
+        width: 75%;
+}
+
+/*BODY RULES*/
+
+#body {
+        color:#FFF;
+        font-family:"Trebuchet MS", Helvetica, sans-serif;
+        margin: 1px 10px 10px 15px;
+}
+
+#body a { 
+        color: #FFF;
+        text-decoration:none;
+}
 
 }
