--- a/CSS/style-JaviGQ.css
+++ b/CSS/style-JaviGQ.css
@@ -1,5 +1,8 @@
 body,
 html{ 
+    height:100%;
+    background-repeat:no-repeat;
+    background-attachment:fixed;
     margin:0px;
     padding:0px;
     color:inherit;
@@ -58,6 +61,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#334e6b', end
         font-size:48px;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
+
 
 
 #h2 {
