--- a/CSS/style-JaviGQ.css
+++ b/CSS/style-JaviGQ.css
@@ -50,8 +50,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#334e6b', end
         border-bottom:1px solid #ccc;
         border-width:1px;
         list-style-type:none;
-        margin:1px;
-        padding:1px;
+        margin:0px;
+        padding:0px;
         text-align:center;
 }
 
@@ -62,6 +62,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#334e6b', end
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+#header img { 
+        width:30%;
+        height:10%;
+        margin-left:auto;
+        margin-right:auto;
+        margin-bottom:0px;
+    
+}
 
 
 
@@ -106,6 +114,7 @@ background-image: radial-gradient(ellipse farthest-side at center, #ECBE51 0%, #
 }
 
 #h2:hover {
+        font-weight:800;
         text-decoration: none;
         color:#FFF;
         text-align:center;
@@ -286,28 +295,28 @@ p {
 }
 
 
-a {
+p a {
         text-align:center;
         text-decoration:underline;
-        color: #FFF;
+        color: #8A7600;
 }
 
-a:link { 
+p a:link { 
         text-align:center;
         text-decoration:underline;
-        color: #FFF;
+        color: #8A7600;
 }
 
-a:visited { 
+p a:visited { 
         text-decoration:underline;
-        color:#FFF;
+        color:#8A7600;
 }
 
 
-a:hover { 
+p a:hover { 
         text-decoration:underline;
         font-weight: 800;
-        color:#FFF;
+        color:#AC9300;
 }
 
 
@@ -371,6 +380,15 @@ iframe {
         
 }
 
+#link1 a {
+        color:#8A7600;
+        text-decoration:underline;
+}
+
+#link2 a {
+        color:#8A7600;
+        text-decoration:underline;
+}
 
 
 /*MEDIA SCREEN*/
@@ -525,7 +543,7 @@ a:visited {
 a:hover { 
         text-decoration:underline;
         font-weight: 800;
-        color:#FFF;
+        color:#8A7600;
 }
 
 
@@ -664,6 +682,16 @@ iframe {
     width:100%;
     height:750px;
     clear:both;
-    
+}
 
+#link1 a {
+        color:#8A7600;
+        text-decoration:underline;
+}
+
+#link2 a {
+        color:#8A7600;
+        text-decoration:underline;
+}
+    
 }   
